fix: add nx/nest

--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nx/nest": "^16.6.0",
     "@nx/workspace": "16.5.5",
+    "@types/lodash": "^4.14.196",
+    "@types/node": "^20.4.8",
     "nx": "16.5.5",
-    "nx-cloud": "latest"
+    "nx-cloud": "latest",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
