--- a/package.json
+++ b/package.json
@@ -2,19 +2,39 @@
   "name": "@alh-nx/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "api:dev": "nx run @alh-nx/api-gateway:start:dev",
+    "auth:dev": "nx run @alh-nx/auth-microservice:start:dev",
+    "start:all": "nx run-many --target=start:dev --all",
+    "build:all": "nx run-many --target=build --all"
+  },
   "private": true,
   "devDependencies": {
+    "@nx/eslint-plugin": "16.6.0",
+    "@nx/jest": "16.6.0",
+    "@nx/js": "16.6.0",
+    "@nx/linter": "16.6.0",
     "@nx/nest": "^16.6.0",
+    "@nx/node": "16.6.0",
     "@nx/workspace": "16.5.5",
+    "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.8",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "nx": "16.5.5",
     "nx-cloud": "latest",
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "tslib": "^2.3.0"
   }
 }
